Remove content border line, push date down, fix alignment & spacing issues

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -139,7 +139,7 @@ section {
 }
 
 section + section {
-    margin-top: 10vh;
+    margin-top: 8vh;
 }
 
 article {
@@ -174,6 +174,11 @@ article {
             page-break-inside: avoid;
             break-inside: avoid;
         }
+    }
+
+    p:last-child {
+        // align last line of text to bottom of article
+        margin-bottom: 0;
     }
 
     .read-more {
@@ -250,6 +255,7 @@ article {
         }
 
         .time {
+            display: block;
             font-size: 0.7em;
             white-space: nowrap;
             color: var(--text-color);
@@ -266,7 +272,6 @@ article {
         margin: 0;
         margin-bottom: 2%;
         width: 100%;
-        border-bottom: 1px solid var(--highlight-color);
         @media print {
             border-color: #000;
         }
@@ -310,6 +315,7 @@ article {
 
     a {
         margin: 1em auto;
+        margin-bottom: 0;
         display: block;
         font-size: 1.5em;
         text-decoration: none;
